# conspire

./: .hgignore  .hgtags  INSTALL  Makefile  NEWS  TODO  autogen.sh  buildsys.mk.in  configure.ac  conspire.1  conspire.desktop  conspire.in  conspire.pc.in  extra.mk.in  libtool
bindings/python/: conspire.py
doc/: settings.html
intl/: Makefile  libgnuintl.h
mk/: rules.mk  rules.mk.in
pixmaps/: Makefile
plugins/: Makefile.in
plugins/perl/: Makefile.in
plugins/python/: Makefile.in
po/: Makefile  Makefile.in.in  POTFILES.in  be.po  ca.po  conspire.pot  cs.po  de.po  el.po  es.po  fi.po  fr.po  gl.po  hu.po  it.po  ja.po  ko.po  lt.po  mk.po  nl.po  pa.po  pt.po  ru.po  sq.po  sr.po  sv.po  uk.po  vi.po  zh_CN.po  zh_TW.po
src/: Makefile
src/common/: Makefile  base64.c  cap.c  cap.h  cfgfiles.c  cfgfiles.h  command_factory.c  command_factory.h  command_option.c  command_option.h  common.h  configdb.c  configdb.h  ctcp.c  dcc.c  dcc.h  debug.h  defconf.c  defconf.h  fe.h  format.c  format.h  getopt.c  getopt.h  ignore-ng.c  ignore-ng.h  ignore-signals.c  ignore.c  inbound.c  inbound.h  inet.h  linequeue.c  linequeue.h  modes.c  network.c  notify.c  notify.h  outbound.c  outbound.h  plugin-timer.c  (+36 more)
src/common/adns/: .depend  Makefile  internal.h
src/common/dbus/: Makefile  dbus-client.c  dbus-plugin.c  marshallers.h  remote-object-glue.h  remote-object.xml
src/common/dbus/examples/: example.c  example.py
src/common/tools/: Makefile  make-te.c
src/common/upnp/: minisoap.c  minissdpc.c  miniupnpc.c  miniupnpc.h  miniwget.c  upnpcommands.c  upnpreplyparse.c  upnpreplyparse.h
src/conspire-python/: Makefile  python.c
src/fe-bot/: Makefile  conspire-bot.1  conspire-bot.c
src/fe-gtk/: Makefile  about.c  ascii.c  banlist.c  chanlist.c  chanview-tree.c  chanview.c  chanview.h  conspire-gtk.1  conversation-window.c  conversation-window.h  custom-list.h  dccgui.c  editlist.c  fe-gtk.c  fe-gtk.h  fkeys.c  gossip-cell-renderer-expander.c  gtkutil.c  joind.c  maingui.c  maingui.h  menu.c  notifygui.c  palette.c  pixmaps.c  pixmaps.h  plugin-tray.c  plugingui.c  rawlog.c  search.c  servlistgui.c  setup.c  sexy-spell-entry.c  sync-menu.c  textgui.c  tray.c  tray.h  urlgrab.c  userlistgui.c  (+2 more)
src/libconspire-xchatemu/: Makefile  xchatemu.c  xchatemu.h
src/libcontrast/: Makefile  contrast.c  contrast.h
src/pixmaps/: Makefile
src/plugins/: Makefile
src/plugins/autoaway/: Makefile  autoaway.c  autoaway.h  gscreensaver.c  gscreensaver.h  xscreensaver.c  xscreensaver.h
src/plugins/country/: Makefile  country.c
src/plugins/exec/: Makefile  exec.c
src/plugins/helloworld/: Makefile  helloworld.c
src/plugins/highlight-notify/: Makefile  highlight-notify.c
src/plugins/identify-msg/: Makefile  identify-msg.c
src/plugins/javascript/: Makefile  commands.c  commands.h  javascript.c  javascript.h  session.c  session.h  signals.c  signals.h
src/plugins/javascript/examples/: test.js
src/plugins/presence/: Makefile  presence.c
src/plugins/python/: Makefile  cap.pxd  history.pxd  linequeue.pxd  python.c  signal_factory.pxd  xchat.pxd
src/plugins/python/Examples/: test.py
src/plugins/timer/: Makefile  timer.c
src/xchatwrap/: .depend  Makefile  conspire-xchatwrap.1  conspire-xchatwrap.c  marshallers.h  marshallers.list
win32/: conspire-config.h
win32/conspire-vs2008/: conspire-vs2008.sln
win32/conspire-vs2008/conspire/: conspire.vcproj
win32/conspire-vs2008/conspire/res/: conspire.rc  resource.h
win32/conspire-vs2008/libconspire/: libconspire.vcproj
win32/conspire-vs2008/libcontrast/: libcontrast.vcproj
